--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "geist": "^1.3.1",
     "next": "15.0.4",
+    "package": "^1.0.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "sonner": "^1.7.0"
